# kabu-app

./: .gitignore  CLAUDE.md  app.py  app_fx.py  main.py  plan_mode_prompt.md  pyproject.toml  requirements.txt  sync_fx.py  sync_kabu.py
.claude/: settings.json
.github/workflows/: check_exit_signals.yml  sync_fx.yml  sync_stock.yml
backtest/: CLAUDE.md  batch_run.py  data_fetcher.py  detail_view.py  engine.py  signals.py  strategy.py
backtest/results/: 20260619_7203.T_1d_fast25_slow75.csv  20260619_USDJPY=X_1h_fast20_slow200.csv  20260619_USDJPY=X_4h_fast20_slow200.csv  20260619_summary.csv
docs/: kabu_app_article_structure.md  kabu_app_prompts.md  operation_manual.md  pf_spec.md  project_vision.md
docs/prompts/: README.md
investment-report/: CLAUDE.md  generate_report.py
investment-report/templates/: report.html
market_chart_starter/: README.md  backtest.py  index.html  sample_4h.csv
note_workflow/: CLAUDE.md  config.py  fetch_gdoc.py  generate_proposals.py  publish_flow.py
note_workflow/assets/: generate_header.py
note_workflow/dev_logs/: 2026-06-25-backup-strategy-and-market-chart-starter-fix.md  2026-06-25-fx-dashboard-ux-and-troubleshooting.md  2026-06-25-git-management-policy.md  2026-06-25-stock-short-position-support.md  2026-06-25-yfinance-rate-limit-fix.md  2026-06-26-fx-short-position-support.md  2026-06-28-fx-rci-live-signal-and-trade-history.md  2026-06-30-fx-real-trade-mt4-format-and-gold-pip-fix.md  README.md
note_workflow/drafts/: 20260619_draft_pf-backtest-engine.md  (+5 more)
scripts/: check_exit_signals.py
tests/: test_strategy.py
(+15 files in other folders)
