[project]
name = "kabu-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.54.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "pip-system-certs>=5.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
    "yfinance==1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
